tests/NormalTests/paczka1/small_fuzzy/88259016.err
Error in line 2: S59 S59 95,4
Error in line 3: LI7kVDHxwt S492 50,0
Error in line 6: S59 S871 6,7
Error in line 9: PIrdIyj A56 53,6
Error in line 13: 6g9Mt2kp S871 9,2
